Inject code into game for accurate max boost reading
Also add support for threadstack pointers which
solves an issue on the latest Windows 11.
Also fix many native memory leaks and poll memory
more efficiently.